# python-uv-monorepo

./: .gitignore  README.md  hello.py  pyproject.toml
apps/greeter/: pyproject.toml
apps/greeter/src/greeter/: __init__.py
libs/greeting/: pyproject.toml
libs/greeting/src/greeting/: __init__.py
