[project]
name = "greeter"
version = "0.1.0"
description = "An app example"
authors = [
    { name = "Yuya Kato", email = "katya4oyu@icloud.com" } 
]
requires-python = ">=3.10, <4"
dependencies = [
  "greeting"
]

[project.scripts]
app = "greeter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"