[project]
name = "greeting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yuuya", email = "yuuya.yk.katoh@prism.ricoh" } 
]
requires-python = ">=3.10, <4"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
